--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,10 +6,10 @@
 #    By: aduriez <aduriez@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/09 17:09:10 by dpoltura          #+#    #+#              #
-#    Updated: 2024/06/25 12:49:16 by aduriez          ###   ########.fr        #
+#    Updated: 2024/09/28 10:50:00 by aduriez          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-CC = cc
+
 CFLAGS = -Wall -Wextra -Werror -g -fPIE -Wno-unused-command-line-argument
 LDFLAGS = -lreadline
 
@@ -22,6 +22,8 @@ SRCS =	minishell_parse.c \
 		lexer.c \
 		ft_here_doc.c \
 		ft_signaux.c \
+		ft_init_env.c \
+		ft_split.c \
 
 OBJS = $(SRCS:%.c=%.o)
 
