--- a/minishell/.vscode/settings.json
+++ b/minishell/.vscode/settings.json
@@ -30,7 +30,7 @@
     "signal.h": "c",
     "cstdlib": "c"
   },
-  "C_Cpp_Runner.msvcBatchPath": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Auxiliary/Build/vcvarsall.bat",
+  "C_Cpp_Runner.msvcBatchPath": "",
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
