--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -6,7 +6,7 @@
 #    By: aduriez <aduriez@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/09 17:09:10 by dpoltura          #+#    #+#              #
-#    Updated: 2024/10/23 16:35:21 by aduriez          ###   ########.fr        #
+#    Updated: 2024/10/23 16:52:58 by aduriez          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,6 +14,7 @@ CFLAGS = -Wall -Wextra -Werror -g -fPIE -Wno-unused-command-line-argument
 LDFLAGS = -lreadline #-fsanitize=address
 
 SRCS =	minishell_parse.c \
+		ft_change_input.c \
 		ft_exit.c \
 		ft_parsing.c \
 		ft_utils_pars.c \
